--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2018"
 
 [dependencies]
 hyper = "*"
+reqwest = "^0.9.20"
+hyper-openssl = "0.7.1"
 docopt = "^1.0"
-serde = "^1.0"
+serde  = "^1.0"
+serde_json  = "1.0"
